comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
 <body>
     <main>
         <header>
-            <h1>Titulo principal</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>artigo 001</h2>
-            <p>texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Sit veniam in accusantium excepturi molestias explicabo beatae voluptate illum sequi.
+                  Dicta qui nostrum sed dolore porro, iure possimus ullam tempora assumenda.</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
-            <p>texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Pariatur sint accusamus dolorem quod distinctio nihil aperiam,
+                  adipisci temporibus consectetur sapiente quidem dolorum voluptatibus, 
+                  tempore eius aspernatur, beatae assumenda ducimus. Dolores!</p>
         </article>
     </main>
     
